--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -311,17 +311,9 @@
        "text": [
         "Populating the interactive namespace from numpy and matplotlib\n"
        ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING: pylab import has clobbered these variables: ['cm', 'cov', 'e']\n",
-        "`%matplotlib` prevents importing * from pylab and numpy\n"
-       ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -332,7 +324,7 @@
       "X = sp.MatrixSymbol('x', 3, 1)\n",
       "x1, x2, x3 = sp.symbols('x_1, x_2, x_3')\n",
       "x = sp.Matrix([x1, x2, x3])\n",
-      "fmt.displayMath(a, fmt.joinMath('=', x, y), sep=\"\")"
+      "fmt.displayMath(a, fmt.joinMath('=', x, y), sep=\"\", pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -348,11 +340,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xe1b9da0>"
+        "<IPython.core.display.Math at 0x1e0f550>"
        ]
       }
      ],
-     "prompt_number": 42
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -378,7 +370,7 @@
       "l1[1, 0] = -a[1, 0]/a[0, 0]\n",
       "l1[2, 0] = -a[2, 0]/a[0, 0]\n",
       "\n",
-      "fmt.displayMath(L1*a, fmt.joinMath('=', x, L1*y), \"\\;,\\;\\;\", l1*a, fmt.joinMath('=', x, l1*y), sep=\"\")"
+      "fmt.displayMath(L1*a, fmt.joinMath('=', x, L1*y), \"\\;,\\;\\;\", l1*a, fmt.joinMath('=', x, l1*y), sep=\"\", pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -389,16 +381,16 @@
      "outputs": [
       {
        "latex": [
-        "$$L_{1} \\left(\\begin{matrix}2 & 1 & -1\\\\-6 & -2 & 4\\\\-2 & 1 & 2\\end{matrix}\\right)\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=L_{1} \\left(\\begin{matrix}8\\\\-22\\\\-3\\end{matrix}\\right)\\;,\\;\\;\\left(\\begin{matrix}2 & 1 & -1\\\\0 & 1 & 1\\\\0 & 2 & 1\\end{matrix}\\right)\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=\\left(\\begin{matrix}8\\\\2\\\\5\\end{matrix}\\right)$$"
+        "$$\\smallL_{1} \\left(\\begin{matrix}2 & 1 & -1\\\\-6 & -2 & 4\\\\-2 & 1 & 2\\end{matrix}\\right)\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=L_{1} \\left(\\begin{matrix}8\\\\-22\\\\-3\\end{matrix}\\right)\\;,\\;\\;\\left(\\begin{matrix}2 & 1 & -1\\\\0 & 1 & 1\\\\0 & 2 & 1\\end{matrix}\\right)\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=\\left(\\begin{matrix}8\\\\2\\\\5\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xdd9bda0>"
+        "<IPython.core.display.Math at 0xa3dad68>"
        ]
       }
      ],
-     "prompt_number": 43
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -420,7 +412,7 @@
       "y2 = l1*y\n",
       "l2[2, 1] = -a2[2, 1]/a2[1, 1]\n",
       "u = l2*a2\n",
-      "fmt.displayMath(L2*a2, fmt.joinMath('=', x, L2*y2), \"\\;,\\;\", u, fmt.joinMath('=', x, l2*y2), sep=\"\")"
+      "fmt.displayMath(L2*a2, fmt.joinMath('=', x, L2*y2), \"\\;,\\;\", u, fmt.joinMath('=', x, l2*y2), sep=\"\", pre=\"\\\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -431,16 +423,16 @@
      "outputs": [
       {
        "latex": [
-        "$$L_{2} \\left(\\begin{matrix}2 & 1 & -1\\\\0 & 1 & 1\\\\0 & 2 & 1\\end{matrix}\\right)\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=L_{2} \\left(\\begin{matrix}8\\\\2\\\\5\\end{matrix}\\right)\\;,\\;\\left(\\begin{matrix}2 & 1 & -1\\\\0 & 1 & 1\\\\0 & 0 & -1\\end{matrix}\\right)\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=\\left(\\begin{matrix}8\\\\2\\\\1\\end{matrix}\\right)$$"
+        "$$\\smallL_{2} \\left(\\begin{matrix}2 & 1 & -1\\\\0 & 1 & 1\\\\0 & 2 & 1\\end{matrix}\\right)\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=L_{2} \\left(\\begin{matrix}8\\\\2\\\\5\\end{matrix}\\right)\\;,\\;\\left(\\begin{matrix}2 & 1 & -1\\\\0 & 1 & 1\\\\0 & 0 & -1\\end{matrix}\\right)\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=\\left(\\begin{matrix}8\\\\2\\\\1\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xdd9bf98>"
+        "<IPython.core.display.Math at 0xa3baa20>"
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -460,7 +452,7 @@
       "Ui = sp.MatrixSymbol('U^{-1}', 3, 3)\n",
       "U = sp.MatrixSymbol('U', 3, 3)\n",
       "L = sp.MatrixSymbol('L', 3, 3)\n",
-      "fmt.displayMath(fmt.joinMath('=', L1, l1), fmt.joinMath('=', L2, l2), fmt.joinMath('=', U, u))"
+      "fmt.displayMath(fmt.joinMath('=', L1, l1), fmt.joinMath('=', L2, l2), fmt.joinMath('=', U, u), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -471,16 +463,16 @@
      "outputs": [
       {
        "latex": [
-        "$$L_{1}=\\left(\\begin{matrix}1 & 0 & 0\\\\3 & 1 & 0\\\\1 & 0 & 1\\end{matrix}\\right)\\;,\\;\\;\\;L_{2}=\\left(\\begin{matrix}1 & 0 & 0\\\\0 & 1 & 0\\\\0 & -2 & 1\\end{matrix}\\right)\\;,\\;\\;\\;U=\\left(\\begin{matrix}2 & 1 & -1\\\\0 & 1 & 1\\\\0 & 0 & -1\\end{matrix}\\right)$$"
+        "$$\\small L_{1}=\\left(\\begin{matrix}1 & 0 & 0\\\\3 & 1 & 0\\\\1 & 0 & 1\\end{matrix}\\right)\\;,\\;\\;\\;L_{2}=\\left(\\begin{matrix}1 & 0 & 0\\\\0 & 1 & 0\\\\0 & -2 & 1\\end{matrix}\\right)\\;,\\;\\;\\;U=\\left(\\begin{matrix}9.0 & 2.0 & 5.0 & 0.0\\\\0.0 & 3.0 & 1.0 & 2.0\\\\0.0 & 0.0 & -4.92592592592593 & 1.59259259259259\\\\0.0 & 0.0 & 0.0 & 1.24812030075188\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x97aa908>"
+        "<IPython.core.display.Math at 0x3b16be0>"
        ]
       }
      ],
-     "prompt_number": 45
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -513,7 +505,7 @@
       "y3 = l2*y2\n",
       "a3 = l2*a2\n",
       "ui = a3.inv()\n",
-      "fmt.displayMath(fmt.joinMath('=', Ui, ui), \"\\;,\\;\", fmt.joinMath('=', x, Ui), fmt.joinMath('=', l2*y2, ui*y3), sep=\"\\;\")"
+      "fmt.displayMath(fmt.joinMath('=', Ui, ui), \"\\;,\\;\", fmt.joinMath('=', x, Ui), fmt.joinMath('=', l2*y2, ui*y3), sep=\"\\;\", pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -521,19 +513,7 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "latex": [
-        "$$U^{{-1}}=\\left(\\begin{matrix}\\frac{1}{2} & - \\frac{1}{2} & -1\\\\0 & 1 & 1\\\\0 & 0 & -1\\end{matrix}\\right)\\;\\;,\\;\\;\\left(\\begin{matrix}x_{1}\\\\x_{2}\\\\x_{3}\\end{matrix}\\right)=U^{{-1}}\\;\\left(\\begin{matrix}8\\\\2\\\\1\\end{matrix}\\right)=\\left(\\begin{matrix}2\\\\3\\\\-1\\end{matrix}\\right)$$"
-       ],
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "<IPython.core.display.Math at 0xe1b9c18>"
-       ]
-      }
-     ],
-     "prompt_number": 46
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -556,7 +536,7 @@
      "collapsed": false,
      "input": [
       "l =  l1.inv()*l2.inv()\n",
-      "fmt.displayMath(fmt.joinMath('=', L, l), fmt.joinMath('=', U, a3), fmt.joinMath('=', L*U, l*a3))"
+      "fmt.displayMath(fmt.joinMath('=', L, l), fmt.joinMath('=', U, a3), fmt.joinMath('=', L*U, l*a3), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -564,19 +544,7 @@
        "slide_type": "fragment"
       }
      },
-     "outputs": [
-      {
-       "latex": [
-        "$$L=\\left(\\begin{matrix}1 & 0 & 0\\\\-3 & 1 & 0\\\\-1 & 2 & 1\\end{matrix}\\right)\\;,\\;\\;\\;U=\\left(\\begin{matrix}2 & 1 & -1\\\\0 & 1 & 1\\\\0 & 0 & -1\\end{matrix}\\right)\\;,\\;\\;\\;L U=\\left(\\begin{matrix}2 & 1 & -1\\\\-6 & -2 & 4\\\\-2 & 1 & 2\\end{matrix}\\right)$$"
-       ],
-       "metadata": {},
-       "output_type": "display_data",
-       "text": [
-        "<IPython.core.display.Math at 0xe1abd30>"
-       ]
-      }
-     ],
-     "prompt_number": 47
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -628,7 +596,7 @@
       "Pi = sp.MatrixSymbol('P^{-1}', 4, 4)\n",
       "A = sp.MatrixSymbol('A', 4, 4)\n",
       "P = sp.MatrixSymbol('P', 4, 4)\n",
-      "fmt.displayMath(fmt.joinMath('=', A, a), fmt.joinMath('=', P, p))"
+      "fmt.displayMath(fmt.joinMath('=', A, a), fmt.joinMath('=', P, p), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -639,16 +607,16 @@
      "outputs": [
       {
        "latex": [
-        "$$A=\\left(\\begin{matrix}0 & 3 & 1 & 2\\\\4 & 0 & -3 & 1\\\\-3 & 1 & 0 & 2\\\\9 & 2 & 5 & 0\\end{matrix}\\right)\\;,\\;\\;\\;P=\\left(\\begin{matrix}0.0 & 1.0 & 0.0 & 0.0\\\\0.0 & 0.0 & 1.0 & 0.0\\\\0.0 & 0.0 & 0.0 & 1.0\\\\1.0 & 0.0 & 0.0 & 0.0\\end{matrix}\\right)$$"
+        "$$\\smallA=\\left(\\begin{matrix}0 & 3 & 1 & 2\\\\4 & 0 & -3 & 1\\\\-3 & 1 & 0 & 2\\\\9 & 2 & 5 & 0\\end{matrix}\\right)\\;,\\;\\;\\;P=\\left(\\begin{matrix}0.0 & 1.0 & 0.0 & 0.0\\\\0.0 & 0.0 & 1.0 & 0.0\\\\0.0 & 0.0 & 0.0 & 1.0\\\\1.0 & 0.0 & 0.0 & 0.0\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xd640eb8>"
+        "<IPython.core.display.Math at 0xa2d8940>"
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
