--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:a74808e92bc0fa5bf4823a9f5d00382fd0074ff43b3db4ddba6c8e2ceab23dd8"
+  "signature": "sha256:18f2f17d4e3b6bd036116ce04d493743aa9263cd0c4874d220012a62e5597f2b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2119,7 +2119,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "-"
       }
      },
      "source": [
