--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:164e93ad6d246176ad106788855532e47db64d2dca0b376d223e5375cd1abb09"
+  "signature": "sha256:57853509d3b088789f290dbc2288e598361ada3aa002126f748b3f06d7ca1bd7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -646,7 +646,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fmt.displayMath(sp.Eq (Pi*A, p.inv()*a))"
+      "fmt.displayMath(sp.Eq (Pi*A, p.inv()*a), pre=\"\\\\small \")"
      ],
      "language": "python",
      "metadata": {
@@ -657,16 +657,16 @@
      "outputs": [
       {
        "latex": [
-        "$$P^{{-1}} A = \\left(\\begin{matrix}9.0 & 2.0 & 5.0 & 0\\\\0 & 3.0 & 1.0 & 2.0\\\\4.0 & 0 & -3.0 & 1.0\\\\-3.0 & 1.0 & 0 & 2.0\\end{matrix}\\right)$$"
+        "$$\\small P^{{-1}} A = \\left(\\begin{matrix}9.0 & 2.0 & 5.0 & 0\\\\0 & 3.0 & 1.0 & 2.0\\\\4.0 & 0 & -3.0 & 1.0\\\\-3.0 & 1.0 & 0 & 2.0\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0xa849fd0>"
+        "<IPython.core.display.Math at 0x7efcfd0>"
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 61
     },
     {
      "cell_type": "markdown",
@@ -714,21 +714,29 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
-      "## Correlation and covariance matrix\n",
+      "## Covariance matrix\n",
       "\n",
-      "They are the most important and ubiquitous matrices in quant Finance, \n",
+      "The most important and ubiquitous matrices in quant Finance, \n",
       "\n",
       "* capturing the linear dependencies of random factors $\\bs r = [r_1, ..., r_n]^T$ \n",
       "* we use $\\bar{\\bs r} = \\mathbb{E}[\\bs r]$ to denote their expectations\n",
       "\n",
-      "#### Covariance matrix: \n",
       "\n",
-      "* $V = \\mathbb{E}[(\\bs r - \\bar{\\bs r})(\\bs r - \\bar{\\bs r})^T] = \\mathbb{E}[\\bs r \\bs r^T] - \\bar{\\bs r}\\bar{\\bs r}^T = (\\text{cov}(r_i, r_j)) = (\\rho_{ij} \\sigma_i \\sigma_j)$ \n",
-      "* Covariance of linear combinations: \n",
+      "$$\\begin{array}{l}V &= \\mathbb{E}[(\\bs r - \\bar{\\bs r})(\\bs r - \\bar{\\bs r})^T] = \\mathbb{E}[\\bs r \\bs r^T] - \\bar{\\bs r}\\bar{\\bs r}^T \\\\\n",
+      "&= (\\text{cov}(r_i, r_j)) = (\\rho_{ij} \\sigma_i \\sigma_j)\\end{array}$$\n",
+      "\n",
+      "Covariance of linear combinations: \n",
       " \n",
-      " $$\\text{cov}(\\bs x^T \\bs r, \\bs y^T \\bs r) = \\mathbb{E}[(\\bs x^T \\bs r)(\\bs r^T \\bs y)] - \\mathbb{E}[\\bs x^T \\bs r]\\mathbb{E}[\\bs r^T \\bs y] = \\bs x^T \\mathbb{E}[\\bs r \\bs r^T] \\bs y - \\bs x^T \\bar{\\bs r}\\bar{\\bs r}^T \\bs y = \\bs x^T V \\bs y$$\n",
+      "$$\\begin{array}{l}\n",
+      "\\text{cov}(\\bs x^T \\bs r, \\bs y^T \\bs r) &= \\mathbb{E}[(\\bs x^T \\bs r)(\\bs r^T \\bs y)] - \\mathbb{E}[\\bs x^T \\bs r]\\mathbb{E}[\\bs r^T \\bs y]\\\\\n",
+      "&= \\bs x^T \\mathbb{E}[\\bs r \\bs r^T] \\bs y - \\bs x^T \\bar{\\bs r}\\bar{\\bs r}^T \\bs y = \\bs x^T V \\bs y\n",
+      "\\end{array}$$\n",
       " "
      ]
     },
@@ -740,13 +748,12 @@
       }
      },
      "source": [
-      " \n",
-      "#### Correlation matrix: \n",
+      "## Correlation matrix\n",
       "\n",
-      "* $C = (\\rho_{ij})$, the co-variance matrix of the normalized factors $\\bs r = [\\frac{r_1}{\\sigma_1}, ..., \\frac{r_n}{\\sigma_n}]^T$\n",
+      "* $C = (\\rho_{ij})$ is the co-variance matrix of the normalized factors $\\bs s = [\\frac{r_1}{\\sigma_1}, ..., \\frac{r_n}{\\sigma_n}]^T$\n",
       "* $V = \\bs \\Sigma C \\bs \\Sigma $, where $\\Sigma$ is a diagonal matrix of $\\sigma_i$\n",
       "\n",
-      "Both of them are symmetric positive semi-definate (SPD):\n",
+      "Both covariance and correlation matrices are symmetric positive semi-definate (SPD):\n",
       "\n",
       "* $\\bs x^T V \\bs x = \\text{cov}[\\bs x^T \\bs r, \\bs x^T \\bs r] = \\text{var}[\\bs x^T \\bs r] \\ge 0$"
      ]
@@ -759,7 +766,7 @@
       }
      },
      "source": [
-      "## Example: weekly returns"
+      "## Example: weekly rprice and returns"
      ]
     },
     {
@@ -797,7 +804,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "source": [
       "Correlation and covariance matrix of weekly returns:"
      ]
@@ -1149,17 +1160,6 @@
      ]
     },
     {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "The resulting covariance (correlation) is: $\\mathbb{E}[L\\bs \\epsilon  (L\\bs \\epsilon)^T] = \\mathbb{E}[L\\bs{\\epsilon  \\epsilon}^T L^T] = LL^T = C$ "
-     ]
-    },
-    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -1171,7 +1171,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "-"
+       "slide_type": "subslide"
       }
      },
      "outputs": [
@@ -1250,6 +1250,18 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "The resulting covariance (correlation) is: \n",
+      "$$\\mathbb{E}[L\\bs \\epsilon  (L\\bs \\epsilon)^T] = \\mathbb{E}[L\\bs{\\epsilon  \\epsilon}^T L^T] = LL^T = C$$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
        "slide_type": "subslide"
       }
      },
@@ -1259,8 +1271,8 @@
       "The covariance/correlation matrix are extremely useful, but they are difficult to deal with when their size grows large:\n",
       "\n",
       "* In practice, we often deal with thousands or tens of thousands risk factors\n",
-      "* The correlation matrix is often easier to work with than the covariance matrix, because it is \"normalized\"\n",
-      "* In practice, it is very difficult to keep a large correlation matrix semi positive definite (SPD)\n",
+      "* Correlation matrix is often easier to work with than the covariance matrix, because it is \"normalized\"\n",
+      "* It is very difficult to keep a large correlation matrix semi positive definite (SPD)\n",
       " * Correlation matrix size of a few thousands is the practical limit\n",
       " * Small changes in isolated values can invalidate the whole correlation matrix\n",
       "* Cholesky decomposition often fails for large matrices due to non-SPD or numerical noise.\n",
@@ -1291,8 +1303,17 @@
       "$$f(\\bs x) = f(x_1, ..., x_n)$$\n",
       "\n",
       "* Derivative to vector (Gradient): $\\frac{\\partial f}{\\partial \\bs x} = \\nabla f = [\\frac{\\partial f}{\\partial x_1}, ..., \\frac{\\partial f}{\\partial x_1}]$\n",
-      "* Note that $\\frac{\\partial f}{\\partial \\bs x}$ is a **row vector**, whenever the vector or matrix appears in the denominator of differentiation, the result is transposed.\n",
-      "\n",
+      "* Note that $\\frac{\\partial f}{\\partial \\bs x}$ is a **row vector**, whenever the vector or matrix appears in the denominator of differentiation, the result is transposed."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
       "## Vector function \n",
       "\n",
       "$$\\bs{ y(x) } = [y_1(\\bs x), ..., y_n(\\bs x)]^T$$\n",
@@ -1340,10 +1361,9 @@
      "source": [
       "## Portfolio optimization\n",
       "\n",
-      "* Powerful mean/variance portfolio theory can be expressed succinctly using linear algebra and matrix calculus. \n",
+      "* Powerful mean/variance portfolio theory can be expressed succinctly using linear algebra and matrix calculus.\n",
       "\n",
-      "### Definitions\n",
-      "Suppose there are $n$ risky assets on the market, with random return vector of $\\bs r$ whose covariance matrix is $V$,\n",
+      "Suppose there are $n$ risky assets on the market, with random return vector $\\bs r$ whose covariance matrix is $V$,\n",
       "\n",
       "* $\\bs w$: a portfolio, its elements are dollar amounts invested in each asset\n",
       "  * $\\bs w^T \\bs r$ is the portfolio's return\n",
