--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:d7c63eb6389d1b2b912480b1547bc738a083a9dc5c52e8e4f3fee823271644f4"
+  "signature": "sha256:ac3dce5af45fb22d3dd67fdf41a5c5649fa10da119035b6ce370c9dbe18d0936"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -57,7 +57,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -227,17 +227,17 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>Least square</th>\n",
-        "      <td>-1,061</td>\n",
-        "      <td>1,063</td>\n",
-        "      <td>4.989</td>\n",
-        "      <td>69.22</td>\n",
+        "      <td>-918.5</td>\n",
+        "      <td>920.5</td>\n",
+        "      <td>5.018</td>\n",
+        "      <td>71.35</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>Ridge regression $\\lambda=0.1$</th>\n",
-        "      <td>0.7266</td>\n",
-        "      <td>1.252</td>\n",
-        "      <td>4.989</td>\n",
-        "      <td>69.62</td>\n",
+        "      <td>0.7673</td>\n",
+        "      <td>1.224</td>\n",
+        "      <td>5.017</td>\n",
+        "      <td>71.65</td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table></font></center>"
@@ -245,11 +245,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x9c07c88>"
+        "<IPython.core.display.HTML at 0x9e149e8>"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -373,7 +373,18 @@
       "$$\\begin{array} \\\\\n",
       "R^{-1} A &= \\Lambda R^{-1} \\\\\n",
       " A^*(R^{-1})^* &= (R^{-1})^* \\Lambda^* \\\\\n",
-      "\\end{array}$$\n",
+      "\\end{array}$$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Eigenvalue decomposition\n",
       "\n",
       "If $A$ is real and symmetric: $A^* = A$:\n",
       "\n",
@@ -525,7 +536,7 @@
       "Q = sp.MatrixSymbol('Q_0', 4, 4)\n",
       "R = sp.MatrixSymbol('R_0', 4, 4)\n",
       "\n",
-      "fmt.displayMath(fmt.joinMath('=', A, sp.Matrix(a)), pre=\"\\\\small \")"
+      "fmt.displayMath(fmt.joinMath('=', A, sp.Matrix(a)), pre=\"\\\\scriptsize \")"
      ],
      "language": "python",
      "metadata": {
@@ -536,16 +547,16 @@
      "outputs": [
       {
        "latex": [
-        "$$\\small A=\\left(\\begin{matrix}5 & 4 & -3 & 2\\\\4 & 4 & 2 & -1\\\\-3 & 2 & 3 & 0\\\\2 & -1 & 0 & -2\\end{matrix}\\right)$$"
+        "$$\\scriptsize A=\\left(\\begin{matrix}5 & 4 & -3 & 2\\\\4 & 4 & 2 & -1\\\\-3 & 2 & 3 & 0\\\\2 & -1 & 0 & -2\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9c58b00>"
+        "<IPython.core.display.Math at 0x9da2fd0>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -559,7 +570,7 @@
      "collapsed": false,
      "input": [
       "q, r = np.linalg.qr(a)\n",
-      "fmt.displayMath(fmt.joinMath('=', Q, sp.Matrix(q).evalf(3)), fmt.joinMath('=', R, sp.Matrix(r).evalf(3)), pre=\"\\\\small \")"
+      "fmt.displayMath(fmt.joinMath('=', Q, sp.Matrix(q).evalf(3)), fmt.joinMath('=', R, sp.Matrix(r).evalf(3)), pre=\"\\\\scriptsize \")"
      ],
      "language": "python",
      "metadata": {
@@ -570,16 +581,16 @@
      "outputs": [
       {
        "latex": [
-        "$$\\small Q_{0}=\\left(\\begin{matrix}-0.68 & -0.297 & -0.611 & 0.276\\\\-0.544 & -0.406 & 0.65 & -0.34\\\\0.408 & -0.75 & 0.136 & 0.502\\\\-0.272 & 0.43 & 0.431 & 0.745\\end{matrix}\\right)\\;,\\;\\;\\;R_{0}=\\left(\\begin{matrix}-7.35 & -3.81 & 2.18 & -0.272\\\\0 & -4.74 & -2.17 & -1.05\\\\0 & 0 & 3.54 & -2.73\\\\0 & 0 & 0 & -0.6\\end{matrix}\\right)$$"
+        "$$\\scriptsize Q_{0}=\\left(\\begin{matrix}-0.68 & -0.297 & -0.611 & 0.276\\\\-0.544 & -0.406 & 0.65 & -0.34\\\\0.408 & -0.75 & 0.136 & 0.502\\\\-0.272 & 0.43 & 0.431 & 0.745\\end{matrix}\\right)\\;,\\;\\;\\;R_{0}=\\left(\\begin{matrix}-7.35 & -3.81 & 2.18 & -0.272\\\\0 & -4.74 & -2.17 & -1.05\\\\0 & 0 & 3.54 & -2.73\\\\0 & 0 & 0 & -0.6\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9c4d6d8>"
+        "<IPython.core.display.Math at 0x9ce0208>"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -602,7 +613,7 @@
       "    d = qr_next(d)\n",
       "    \n",
       "An = sp.MatrixSymbol('A_%d' % ii, 4, 4)\n",
-      "fmt.displayMath(fmt.joinMath('=', A1, sp.Matrix(r.dot(q)).evalf(3)), fmt.joinMath('=', An, sp.Matrix(np.round(d, 3))), pre=\"\\\\small \")"
+      "fmt.displayMath(fmt.joinMath('=', A1, sp.Matrix(r.dot(q)).evalf(3)), fmt.joinMath('=', An, sp.Matrix(np.round(d, 3))), pre=\"\\\\scriptsize \")"
      ],
      "language": "python",
      "metadata": {
@@ -613,16 +624,16 @@
      "outputs": [
       {
        "latex": [
-        "$$\\small A_{1}=\\left(\\begin{matrix}8.04 & 1.98 & 2.19 & 0.163\\\\1.98 & 3.1 & -3.83 & -0.258\\\\2.19 & -3.83 & -0.695 & -0.258\\\\0.163 & -0.258 & -0.258 & -0.447\\end{matrix}\\right)\\;,\\;\\;\\;A_{20}=\\left(\\begin{matrix}8.829 & 0.0 & 0.0 & 0.0\\\\0.0 & 5.405 & 0.009 & 0.0\\\\0.0 & 0.009 & -3.829 & 0.0\\\\0.0 & 0.0 & 0.0 & -0.405\\end{matrix}\\right)$$"
+        "$$\\scriptsize A_{1}=\\left(\\begin{matrix}8.04 & 1.98 & 2.19 & 0.163\\\\1.98 & 3.1 & -3.83 & -0.258\\\\2.19 & -3.83 & -0.695 & -0.258\\\\0.163 & -0.258 & -0.258 & -0.447\\end{matrix}\\right)\\;,\\;\\;\\;A_{20}=\\left(\\begin{matrix}8.829 & 0.0 & 0.0 & 0.0\\\\0.0 & 5.405 & 0.009 & 0.0\\\\0.0 & 0.009 & -3.829 & 0.0\\\\0.0 & 0.0 & 0.0 & -0.405\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x1d5f9b0>"
+        "<IPython.core.display.Math at 0x9ce02b0>"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 23
     },
     {
      "cell_type": "markdown",
@@ -685,7 +696,7 @@
       "fmt.displayMath(fmt.joinMath('=', A, sp.Matrix(np.round(a))), fmt.joinMath('=', x, sp.Matrix(a[:,0])), \n",
       "                fmt.joinMath('=', xn, np.round(np.linalg.norm(b, 2), 3)),\n",
       "                fmt.joinMath('=', e1, sp.Matrix([1, 0, 0, 0])),\n",
-      "                fmt.joinMath('=', u, sp.Matrix(a[:,0]-c).evalf(3)), pre=\"\\\\small \")\n",
+      "                fmt.joinMath('=', u, sp.Matrix(a[:,0]-c).evalf(3)), pre=\"\\\\scriptsize \")\n",
       "\n",
       "fmt.displayMath(\"\\;\")\n",
       "    \n",
@@ -693,19 +704,19 @@
       "H1 = sp.MatrixSymbol('H_1', 4, 4)\n",
       "a1 = h1.dot(a)\n",
       "fmt.displayMath(fmt.joinMath('=', H1, sp.Matrix(np.round(h1, 3))), \n",
-      "                fmt.joinMath('=', H1*A, sp.Matrix(np.round(a1, 3))), pre=\"\\\\small \")"
+      "                fmt.joinMath('=', H1*A, sp.Matrix(np.round(a1, 3))), pre=\"\\\\scriptsize \")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "latex": [
-        "$$\\small A=\\left(\\begin{matrix}5 & 4 & -3 & 2\\\\4 & 4 & 2 & -1\\\\-3 & 2 & 3 & 0\\\\2 & -1 & 0 & -2\\end{matrix}\\right)\\;,\\;\\;\\;x=\\left(\\begin{matrix}5\\\\4\\\\-3\\\\2\\end{matrix}\\right)\\;,\\;\\;\\;\\Vert{x}\\Vert_{2}=7.348\\;,\\;\\;\\;e_{1}=\\left(\\begin{matrix}1\\\\0\\\\0\\\\0\\end{matrix}\\right)\\;,\\;\\;\\;u=\\left(\\begin{matrix}-2.35\\\\4.0\\\\-3.0\\\\2.0\\end{matrix}\\right)$$"
+        "$$\\scriptsize A=\\left(\\begin{matrix}5 & 4 & -3 & 2\\\\4 & 4 & 2 & -1\\\\-3 & 2 & 3 & 0\\\\2 & -1 & 0 & -2\\end{matrix}\\right)\\;,\\;\\;\\;x=\\left(\\begin{matrix}5\\\\4\\\\-3\\\\2\\end{matrix}\\right)\\;,\\;\\;\\;\\Vert{x}\\Vert_{2}=7.348\\;,\\;\\;\\;e_{1}=\\left(\\begin{matrix}1\\\\0\\\\0\\\\0\\end{matrix}\\right)\\;,\\;\\;\\;u=\\left(\\begin{matrix}-2.35\\\\4.0\\\\-3.0\\\\2.0\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9ccb320>"
+        "<IPython.core.display.Math at 0x9ce0358>"
        ]
       },
       {
@@ -715,21 +726,21 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9da2be0>"
+        "<IPython.core.display.Math at 0x9ce0400>"
        ]
       },
       {
        "latex": [
-        "$$\\small H_{1}=\\left(\\begin{matrix}0.68 & 0.544 & -0.408 & 0.272\\\\0.544 & 0.073 & 0.695 & -0.464\\\\-0.408 & 0.695 & 0.478 & 0.348\\\\0.272 & -0.464 & 0.348 & 0.768\\end{matrix}\\right)\\;,\\;\\;\\;H_{1} A=\\left(\\begin{matrix}7.348 & 3.81 & -2.177 & 0.272\\\\0.0 & 4.323 & 0.599 & 1.943\\\\0.0 & 1.758 & 4.051 & -2.207\\\\0.0 & -0.838 & -0.701 & -0.529\\end{matrix}\\right)$$"
+        "$$\\scriptsize H_{1}=\\left(\\begin{matrix}0.68 & 0.544 & -0.408 & 0.272\\\\0.544 & 0.073 & 0.695 & -0.464\\\\-0.408 & 0.695 & 0.478 & 0.348\\\\0.272 & -0.464 & 0.348 & 0.768\\end{matrix}\\right)\\;,\\;\\;\\;H_{1} A=\\left(\\begin{matrix}7.348 & 3.81 & -2.177 & 0.272\\\\0.0 & 4.323 & 0.599 & 1.943\\\\0.0 & 1.758 & 4.051 & -2.207\\\\0.0 & -0.838 & -0.701 & -0.529\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9c4d6a0>"
+        "<IPython.core.display.Math at 0x9e16b70>"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -750,26 +761,26 @@
       "H2 = sp.MatrixSymbol('H_2', 4, 4)\n",
       "a2 = h2.dot(a1)\n",
       "fmt.displayMath(fmt.joinMath('=', H2, sp.Matrix(np.round(h2, 3))), \n",
-      "                fmt.joinMath('=', H2*H1*A, sp.Matrix(np.round(a2, 3))), pre=\"\\\\small \")\n",
+      "                fmt.joinMath('=', H2*H1*A, sp.Matrix(np.round(a2, 3))), pre=\"\\\\scriptsize \")\n",
       "fmt.displayMath(\"\\;\")\n",
       "\n",
       "h3 = householder(a2[:, 2], 2)\n",
       "H3 = sp.MatrixSymbol('H_3', 4, 4)\n",
       "a3 = h3.dot(a2)\n",
       "fmt.displayMath(fmt.joinMath('=', H3, sp.Matrix(np.round(h3, 3))), \n",
-      "                fmt.joinMath('=', H3*H2*H1*A, sp.Matrix(np.round(a3, 3))), pre=\"\\\\small \")"
+      "                fmt.joinMath('=', H3*H2*H1*A, sp.Matrix(np.round(a3, 3))), pre=\"\\\\scriptsize \")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "latex": [
-        "$$\\small H_{2}=\\left(\\begin{matrix}1.0 & 0.0 & 0.0 & 0.0\\\\0.0 & 0.912 & 0.371 & -0.177\\\\0.0 & 0.371 & -0.557 & 0.743\\\\0.0 & -0.177 & 0.743 & 0.646\\end{matrix}\\right)\\;,\\;\\;\\;H_{2} H_{1} A=\\left(\\begin{matrix}7.348 & 3.81 & -2.177 & 0.272\\\\0.0 & 4.741 & 2.172 & 1.047\\\\0.0 & 0.0 & -2.556 & 1.558\\\\0.0 & 0.0 & 2.451 & -2.325\\end{matrix}\\right)$$"
+        "$$\\scriptsize H_{2}=\\left(\\begin{matrix}1.0 & 0.0 & 0.0 & 0.0\\\\0.0 & 0.912 & 0.371 & -0.177\\\\0.0 & 0.371 & -0.557 & 0.743\\\\0.0 & -0.177 & 0.743 & 0.646\\end{matrix}\\right)\\;,\\;\\;\\;H_{2} H_{1} A=\\left(\\begin{matrix}7.348 & 3.81 & -2.177 & 0.272\\\\0.0 & 4.741 & 2.172 & 1.047\\\\0.0 & 0.0 & -2.556 & 1.558\\\\0.0 & 0.0 & 2.451 & -2.325\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9e14e10>"
+        "<IPython.core.display.Math at 0x9e14978>"
        ]
       },
       {
@@ -779,21 +790,21 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9e14c88>"
+        "<IPython.core.display.Math at 0x9e14860>"
        ]
       },
       {
        "latex": [
-        "$$\\small H_{3}=\\left(\\begin{matrix}1.0 & 0.0 & 0.0 & 0.0\\\\0.0 & 1.0 & 0.0 & 0.0\\\\0.0 & 0.0 & -0.722 & 0.692\\\\0.0 & 0.0 & 0.692 & 0.722\\end{matrix}\\right)\\;,\\;\\;\\;H_{3} H_{2} H_{1} A=\\left(\\begin{matrix}7.348 & 3.81 & -2.177 & 0.272\\\\0.0 & 4.741 & 2.172 & 1.047\\\\0.0 & 0.0 & 3.542 & -2.733\\\\0.0 & 0.0 & 0.0 & -0.6\\end{matrix}\\right)$$"
+        "$$\\scriptsize H_{3}=\\left(\\begin{matrix}1.0 & 0.0 & 0.0 & 0.0\\\\0.0 & 1.0 & 0.0 & 0.0\\\\0.0 & 0.0 & -0.722 & 0.692\\\\0.0 & 0.0 & 0.692 & 0.722\\end{matrix}\\right)\\;,\\;\\;\\;H_{3} H_{2} H_{1} A=\\left(\\begin{matrix}7.348 & 3.81 & -2.177 & 0.272\\\\0.0 & 4.741 & 2.172 & 1.047\\\\0.0 & 0.0 & 3.542 & -2.733\\\\0.0 & 0.0 & 0.0 & -0.6\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9e13470>"
+        "<IPython.core.display.Math at 0x9e167f0>"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -810,23 +821,23 @@
       "r = q.T.dot(a)\n",
       "np.round(q.dot(r), 4)\n",
       "\n",
-      "fmt.displayMath(fmt.joinMath('=', Q, sp.Matrix(np.round(q, 3))), fmt.joinMath('=', R, sp.Matrix(np.round(r, 3))), pre=\"\\\\small \")"
+      "fmt.displayMath(fmt.joinMath('=', Q, sp.Matrix(np.round(q, 3))), fmt.joinMath('=', R, sp.Matrix(np.round(r, 3))), pre=\"\\\\scriptsize \")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "latex": [
-        "$$\\small Q=\\left(\\begin{matrix}0.68 & 0.297 & -0.611 & 0.276\\\\0.544 & 0.406 & 0.65 & -0.34\\\\-0.408 & 0.75 & 0.136 & 0.502\\\\0.272 & -0.43 & 0.431 & 0.746\\end{matrix}\\right)\\;,\\;\\;\\;R=\\left(\\begin{matrix}7.348 & 3.81 & -2.177 & 0.272\\\\0.0 & 4.741 & 2.172 & 1.047\\\\0.0 & 0.0 & 3.542 & -2.733\\\\0.0 & 0.0 & 0.0 & -0.6\\end{matrix}\\right)$$"
+        "$$\\scriptsize Q=\\left(\\begin{matrix}0.68 & 0.297 & -0.611 & 0.276\\\\0.544 & 0.406 & 0.65 & -0.34\\\\-0.408 & 0.75 & 0.136 & 0.502\\\\0.272 & -0.43 & 0.431 & 0.746\\end{matrix}\\right)\\;,\\;\\;\\;R=\\left(\\begin{matrix}7.348 & 3.81 & -2.177 & 0.272\\\\0.0 & 4.741 & 2.172 & 1.047\\\\0.0 & 0.0 & 3.542 & -2.733\\\\0.0 & 0.0 & 0.0 & -0.6\\end{matrix}\\right)$$"
        ],
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Math at 0x9da2c88>"
+        "<IPython.core.display.Math at 0x9ccbf28>"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -846,7 +857,7 @@
       "\n",
       "note that $R$ is right trangular, the vector whose norm is to be minimized looks like:\n",
       "\n",
-      "$$\\small \\begin{pmatrix}\n",
+      "$$\\scriptsize \\begin{pmatrix}\n",
       "r_{11} & r_{12} & \\cdots & r_{1n} \\\\\n",
       "0 & r_{22} & \\cdots & r_{2n} \\\\\n",
       "\\vdots & \\ddots & \\ddots & \\vdots \\\\\n",
@@ -1656,10 +1667,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "* The correlation between spot rates are spurious because 10Y spot rate is largely determined by the 9Y spot rates.\n",
-      "\n",
       "$$\\exp(-9 r_9)\\exp(-(10-9) f_9^{10} ) = \\exp(-10 r_{10}) \\iff r_{10} = 0.9r_9 + 0.1f_9^{10} $$\n",
       "\n",
+      "* The correlation between spot rates are spurious because 10Y spot rate is largely determined by the 9Y spot rates.\n",
       "* it makes no difference if we have unlimited precision, but we usually only keep few eigen vectors in PCA\n",
       "* it's better to model the correlation/covariance matrix of forward rates"
      ]
