--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:222b990ab278af7b465b66e64cf3e5e96409b1df43bd20139cfa62ec3c65f8b9"
+  "signature": "sha256:3f823521abce8ea4c314420e53d6f2809930ee572e7dc1f147faf2f958410656"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -54,6 +54,7 @@
      "source": [
       "# Lecure 4: Rootfinding and Interpolation\n",
       "\n",
+      "## Topics\n",
       "* Root finding\n",
       "* Interpolation\n",
       "* Curve building"
@@ -1609,7 +1610,7 @@
       "\n",
       "| | Interest Rate | Credit |\n",
       "| :---: | :----: | :----: |\n",
-      "| primary state variable | zero coupon bond price $b(t)$ | survival probability $p(t)$ |\n",
+      "| primary state variable | discount factor $b(t)$ | survival probability $p(t)$ |\n",
       "| yield, IRR | zero rate <br>$r(t) = -\\frac{1}{t}\\log(b(t))$ | quoted spread <br> $q(t) \\approx -\\frac{1 - \\text{rec}}{t}\\log(p(t))$ |\n",
       "|forward rate| forward interest rate <br> $f(t) = -\\frac{1}{b(t)}\\frac{d b(t)}{d t} $ | hazard rate <br> $h(t) = -\\frac{1}{p(t)}\\frac{d p(t)}{d t} $ |\n",
       "|par swap rate $s(t)$ | par IR swap rate | par CDS spread |\n",
@@ -1780,8 +1781,8 @@
       }
      },
      "source": [
-      "This is a bit strange, why don't we use a continuous interpolation in $h(t)$, like piece wise linear?\n",
-      "or even cubic spline?"
+      "this is quite odd, why don't we use a continuous interpolation in $h(t)$?\n",
+      "* such as piece wise linear or cubic spline?"
      ]
     },
     {
@@ -2267,7 +2268,7 @@
       "## Perturbation locality\n",
       "\n",
       "Changes in hazard rates are more localized with larger $\\lambda$\n",
-      "* A very desirable property in practice"
+      "* A highly desirable property in practice"
      ]
     },
     {
@@ -2408,8 +2409,18 @@
       "Generally, it is always better to interpolate the state variable:\n",
       "\n",
       "* state variables' is the primary determinant of price, such as the cumulative hazard $g(t) = -\\log(p(t))$\n",
-      "* the derivatives, like $h(t) = g'(t)$, only changes the prices through its cumulative effects (integral), which leads to zigzags and waves when combined with a continuous interpolation.\n",
-      "* interpolate derivatives + continuous algorithm = spectacular failure"
+      "* the derivatives, like $h(t) = g'(t)$, only changes the prices through its cumulative effects (integral), which leads to zigzags and waves when combined with a continuous interpolation."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "interpolate derivatives + continuous interpolation algorithm = **DISASTER**"
      ]
     },
     {
