--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:409543073e1c6b714b89568a0aef2b1834c94b7fc8de15cc44888aaf5d4336c5"
+  "signature": "sha256:b74d4e95b020dbe98fb50d810a1486fa9665078ace6df714364b45f480fb1788"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1758,11 +1758,8 @@
       "* Ideally we want the vairable itself to be continous, but can live with the discontinuities in $f'(t)$ when $\\lambda \\rightarrow \\infty$\n",
       "\n",
       "Industry standard:\n",
-      "\n",
-      "* build piecewise flat curve in hazard rate $h(t)$ for CDS:\n",
-      "\n",
       "$$p(t) = e^{-\\int_0^t h(s) ds}$$\n",
-      "\n",
+      "* build piecewise flat curve in hazard rate $h(t)$ for CDS:\n",
       "* where $p(t)$ is the survival probability of the reference entity at time $t$. "
      ]
     },
@@ -2176,7 +2173,7 @@
      },
      "source": [
       "Iteration is a simple and effective technique to reduce fit error\n",
-      "* take the inaccurate curve as the starting point, and redo the boostrapping\n",
+      "* start with the bootstrapped (inaccurate) curve, redo the boostrapping\n",
       "* error goes below 1bps after one extra iteration in this example\n",
       "* simple iteration often outperforms sophisticated optimizers\n",
       "\n",
