--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:b74d4e95b020dbe98fb50d810a1486fa9665078ace6df714364b45f480fb1788"
+  "signature": "sha256:f6a6823909798d3bb2e59b8e76c2cbe5ad85303176e0da7cabf8d9ec4fc4dde2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -783,7 +783,8 @@
       "$$\n",
       "\n",
       "* $\\delta(x)$ is the Dirac delta function, $\\int_{-\\infty}^{\\infty} f(x) \\delta(a) dx = f(a)$\n",
-      "* $p(x)$ is the probability density function of $s$"
+      "* $p(x)$ is the probability density function of $s$\n",
+      "* the tranche example is concave because its payoff is $k - \\mathbb{E}[\\max(s-k, 0)]$"
      ]
     },
     {
